--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@astrojs/rss": "^4.0.3",
         "@astrojs/sitemap": "^3.0.5",
         "astro": "^4.2.3",
+        "open-props": "^1.6.17",
         "typescript": "^5.3.3"
     },
     "devDependencies": {
