--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     },
     "dependencies": {
         "@astrojs/check": "^0.4.1",
-        "@astrojs/mdx": "^2.0.6",
-        "@astrojs/rss": "^4.0.3",
+        "@astrojs/mdx": "^2.1.1",
+        "@astrojs/rss": "^4.0.4",
         "@astrojs/sitemap": "^3.0.5",
-        "astro": "^4.2.3",
-        "open-props": "^1.6.17",
+        "@astrojs/ts-plugin": "^1.4.0",
+        "astro": "^4.2.7",
+        "open-props": "^1.6.18",
         "typescript": "^5.3.3"
     },
     "devDependencies": {
