--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,12 @@
 {
     "extends": "astro/tsconfigs/strict",
     "compilerOptions": {
+        "plugins": [
+            {
+                "name": "@astrojs/ts-plugin",
+            },
+        ],
+        "jsx": "preserve",
         "baseUrl": ".",
         "strictNullChecks": true,
         "paths": {
@@ -12,5 +18,11 @@
             "@scripts/*": ["src/scripts/*"],
         },
     },
-    "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.astro"],
+    "include": [
+        "src/**/*.d.ts",
+        "src/**/*.tsx",
+        "src/**/*.ts",
+        "src/**/*.astro",
+    ],
+    "exclude": ["node_modules"],
 }
