--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "cssvar.files": [
         "./node_modules/open-props/open-props.min.css",
-        "src/styles/global.css"
+
+        "src/styles/*.astro"
         // if you have an alternative path to where your styles are located
         // you can add it in this array of files
         // "assets/styles/variables.css"
