--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,12 @@
 
     // add support for autocomplete in JS or JS like files
     "cssvar.extensions": ["css", "postcss", "jsx", "tsx", "astro"],
-
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "eslint.validate": [
+        "javascript",
+        "javascriptreact",
+        "astro", // Enable .astro
+        "typescript", // Enable .ts
+        "typescriptreact" // Enable .tsx
+    ]
 }
