--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,8 @@
 {
   "recommendations": [
     "astro-build.astro-vscode",
+    "dbaeumer.vscode-eslint",
+    "phoenisx.cssvar",
     "unifiedjs.vscode-mdx",
     "github.copilot"
   ],
