--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "@astrojs/mdx": "^2.1.1",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.0.5",
-    "@astrojs/ts-plugin": "^1.4.0",
     "@sentry/astro": "^7.100.1",
     "@spotlightjs/astro": "^1.0.15",
-    "astro": "^4.3.3",
+    "astro": "^4.3.5",
     "canvas-confetti": "^1.9.2",
     "open-props": "^1.6.18",
     "typescript": "^5.3.3"
@@ -34,6 +33,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^0.31.4",
+    "eslint-plugin-react": "^7.33.2",
     "postcss-html": "^1.6.0",
     "postcss-jit-props": "^1.0.14",
     "postcss-nesting": "^12.0.2",
