--- a/.eslintignore
+++ b/.eslintignore
@@ -16,6 +16,9 @@ pnpm-debug.log*
 
 # environment variables
 .env
+.env.production
+.env.local
+.env.sentry-build-plugin
 
 
 # macOS-specific files
