--- a/.prettierignore
+++ b/.prettierignore
@@ -20,6 +20,9 @@ pnpm-debug.log*
 
 # environment variables
 .env
+.env.production
+.env.local
+.env.sentry-build-plugin
 
 
 # macOS-specific files
