--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "host": "astro dev -- --host",
     "start": "astro dev",
     "check": "astro check",
     "build": "astro check && astro build",
@@ -35,11 +36,13 @@
     "eslint-plugin-astro": "^0.31.4",
     "eslint-plugin-react": "^7.33.2",
     "postcss-html": "^1.6.0",
+    "postcss-import": "^16.0.1",
     "postcss-jit-props": "^1.0.14",
     "postcss-nesting": "^12.0.2",
     "postcss-pow": "^1.0.1",
     "prettier": "^3.2.5",
-    "prettier-plugin-astro": "^0.13.0"
+    "prettier-plugin-astro": "^0.13.0",
+    "vite": "^5.1.3"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0",
