--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "test": "vitest",
     "host": "astro dev -- --host",
     "start": "astro dev",
     "check": "astro check",
@@ -19,9 +20,9 @@
     "@astrojs/mdx": "^2.1.1",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.0.5",
-    "@sentry/astro": "^7.100.1",
+    "@sentry/astro": "^7.101.1",
     "@spotlightjs/astro": "^1.0.15",
-    "astro": "^4.3.5",
+    "astro": "^4.4.0",
     "canvas-confetti": "^1.9.2",
     "open-props": "^1.6.18",
     "typescript": "^5.3.3"
@@ -38,11 +39,12 @@
     "postcss-html": "^1.6.0",
     "postcss-import": "^16.0.1",
     "postcss-jit-props": "^1.0.14",
-    "postcss-nesting": "^12.0.2",
+    "postcss-nesting": "^12.0.3",
     "postcss-pow": "^1.0.1",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
-    "vite": "^5.1.3"
+    "vite": "^5.1.3",
+    "vitest": "^1.3.0"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0",
