--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "test": "vitest",
-    "host": "astro dev -- --host",
+    "host": "astro dev --host",
     "start": "astro dev",
     "check": "astro check",
     "build": "astro check && astro build",
@@ -18,13 +18,19 @@
   "dependencies": {
     "@astrojs/check": "^0.5.4",
     "@astrojs/mdx": "^2.1.1",
+    "@astrojs/react": "^3.0.10",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.0.5",
+    "@astrojs/vercel": "^7.3.1",
     "@sentry/astro": "^7.101.1",
     "@spotlightjs/astro": "^1.0.15",
+    "@types/react": "^18.2.57",
+    "@types/react-dom": "^18.2.19",
     "astro": "^4.4.0",
     "canvas-confetti": "^1.9.2",
     "open-props": "^1.6.18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
