--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
   "cssvar.files": [
     "./node_modules/open-props/open-props.min.css",
 
-    "src/styles/*.astro"
+    "src/styles/*.astro",
+    "src/styles/*.css"
     // if you have an alternative path to where your styles are located
     // you can add it in this array of files
     // "assets/styles/variables.css"
