--- a/package.json
+++ b/package.json
@@ -16,41 +16,42 @@
     "format": "prettier --write . --plugin=prettier-plugin-astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.5.4",
+    "@astrojs/check": "^0.5.6",
     "@astrojs/mdx": "^2.1.1",
     "@astrojs/react": "^3.0.10",
     "@astrojs/rss": "^4.0.5",
-    "@astrojs/sitemap": "^3.0.5",
-    "@astrojs/vercel": "^7.3.1",
-    "@sentry/astro": "^7.101.1",
-    "@spotlightjs/astro": "^1.0.15",
-    "@types/react": "^18.2.57",
+    "@astrojs/sitemap": "^3.1.1",
+    "@astrojs/vercel": "^7.3.4",
+    "@sentry/astro": "^7.105.0",
+    "@spotlightjs/astro": "^1.0.16",
+    "@types/react": "^18.2.62",
     "@types/react-dom": "^18.2.19",
-    "astro": "^4.4.0",
+    "astro": "^4.4.11",
     "canvas-confetti": "^1.9.2",
-    "open-props": "^1.6.18",
+    "date-fns": "^3.3.1",
+    "open-props": "^1.6.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.6.4",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^0.31.4",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react": "^7.34.0",
     "postcss-html": "^1.6.0",
     "postcss-import": "^16.0.1",
     "postcss-jit-props": "^1.0.14",
-    "postcss-nesting": "^12.0.3",
+    "postcss-nesting": "^12.0.4",
     "postcss-pow": "^1.0.1",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
-    "vite": "^5.1.3",
-    "vitest": "^1.3.0"
+    "vite": "^5.1.4",
+    "vitest": "^1.3.1"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0",
