--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,25 +1,31 @@
 {
+    "css.validate": false,
+  "less.validate": false,
+  "scss.validate": false,
   "cssvar.files": [
     "./node_modules/open-props/open-props.min.css",
-
-    "src/styles/*.astro",
-    "src/styles/*.css"
+    "**/*.astro",
+    "**/*.css"
     // if you have an alternative path to where your styles are located
     // you can add it in this array of files
     // "assets/styles/variables.css"
   ],
 
   // Do not ignore node_modules css files, which is ignored by default
-  "cssvar.ignore": [],
+  // "cssvar.ignore": [],
 
   // add support for autocomplete in JS or JS like files
   "cssvar.extensions": ["css", "postcss", "jsx", "tsx", "astro"],
+    "editor.defaultFormatter": "astro-build.astro-vscode",
+    "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
+  "editor.formatOnType": true,
   "eslint.validate": [
     "javascript",
     "javascriptreact",
     "astro", // Enable .astro
     "typescript", // Enable .ts
     "typescriptreact" // Enable .tsx
-  ]
+  ],
+  "stylelint.validate": ["html", "vue", "svelte", "astro"]
 }
