--- a/package.json
+++ b/package.json
@@ -13,48 +13,50 @@
     "astro": "astro",
     "lint": "eslint  \"src/**/*.{js,ts,jsx,tsx,astro}\"",
     "fix": "eslint  --fix  \"src/**/*.{js,ts,jsx,tsx,astro}\"",
-    "format": "prettier --write . --plugin=prettier-plugin-astro"
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "@astrojs/check": "^0.5.6",
-    "@astrojs/mdx": "^2.1.1",
-    "@astrojs/react": "^3.0.10",
+    "@astrojs/check": "^0.5.10",
+    "@astrojs/mdx": "^2.3.0",
+    "@astrojs/react": "^3.3.0",
     "@astrojs/rss": "^4.0.5",
-    "@astrojs/sitemap": "^3.1.1",
-    "@astrojs/vercel": "^7.3.4",
-    "@sentry/astro": "^7.105.0",
-    "@spotlightjs/astro": "^1.0.16",
-    "@types/react": "^18.2.62",
-    "@types/react-dom": "^18.2.19",
-    "astro": "^4.4.11",
+    "@astrojs/sitemap": "^3.1.2",
+    "@astrojs/vercel": "^7.5.2",
+    "@sentry/astro": "^7.109.0",
+    "@spotlightjs/astro": "^1.0.20",
+    "@types/react": "^18.2.75",
+    "@types/react-dom": "^18.2.24",
+    "astro": "^4.6.0",
     "canvas-confetti": "^1.9.2",
-    "date-fns": "^3.3.1",
-    "open-props": "^1.6.20",
+    "date-fns": "^3.6.0",
+    "open-props": "^1.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.3.3"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.6.4",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "autoprefixer": "^10.4.18",
+    "@typescript-eslint/parser": "^7.6.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-astro": "^0.31.4",
-    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-astro": "^0.33.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-markdown": "^4.0.1",
+    "globals": "^15.0.0",
     "postcss-html": "^1.6.0",
-    "postcss-import": "^16.0.1",
+    "postcss-import": "^16.1.0",
     "postcss-jit-props": "^1.0.14",
-    "postcss-nesting": "^12.0.4",
+    "postcss-nesting": "^12.1.1",
     "postcss-pow": "^1.0.1",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
-    "vite": "^5.1.4",
-    "vitest": "^1.3.1"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.8",
+    "vitest": "^1.4.0"
   },
   "engines": {
-    "node": ">=18.0.0 <19.0.0",
+    "node": ">=20.12.0",
     "pnpm": ">=8"
-  }
+  },
+  "packageManager": "pnpm@8.15.6+sha256.01c01eeb990e379b31ef19c03e9d06a14afa5250b82e81303f88721c99ff2e6f"
 }
