--- a/package.json
+++ b/package.json
@@ -17,25 +17,21 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
-    "@astrojs/mdx": "^2.3.0",
-    "@astrojs/react": "^3.3.0",
+    "@astrojs/mdx": "^2.3.1",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.2",
     "@astrojs/vercel": "^7.5.2",
     "@sentry/astro": "^7.109.0",
     "@spotlightjs/astro": "^1.0.20",
-    "@types/react": "^18.2.75",
-    "@types/react-dom": "^18.2.24",
     "astro": "^4.6.0",
-    "canvas-confetti": "^1.9.2",
-    "date-fns": "^3.6.0",
     "open-props": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/canvas-confetti": "^1.6.4",
-    "@typescript-eslint/parser": "^7.6.0",
+    "@eslint/js": "^9.1.1",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -51,6 +47,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.7.1",
     "vite": "^5.2.8",
     "vitest": "^1.4.0"
   },
