--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,12 @@
     "jsx": "react-jsx",
     "jsxImportSource": "react"
   },
-    "include": ["src/**/*.d.ts", "src/**/*.tsx", "src/**/*.ts", "src/**/*.js", "src/**/*.astro"],
+  "include": [
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.ts",
+    "src/**/*.js",
+    "src/**/*.astro"
+  ],
   "exclude": ["node_modules"]
 }
