--- a/package.json
+++ b/package.json
@@ -29,14 +29,15 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@astrojs/react": "^3.3.1",
     "@eslint/js": "^9.1.1",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "autoprefixer": "^10.4.19",
+    "canvas-confetti": "^1.9.2",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^0.34.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-markdown": "^4.0.1",
     "globals": "^15.0.0",
     "postcss-html": "^1.6.0",
