--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,10 @@
   },
   "include": [
     "src/**/*.d.ts",
-    "src/**/*.tsx",
     "src/**/*.ts",
     "src/**/*.js",
-    "src/**/*.astro"
+    "src/**/*.astro",
+     "src/**/*.tsx"
   ],
   "exclude": ["node_modules"]
 }
