--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/lit": "^4.0.1",
     "@astrojs/mdx": "^2.3.1",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.2",
     "@astrojs/vercel": "^7.5.2",
     "@sentry/astro": "^7.109.0",
     "@spotlightjs/astro": "^1.0.20",
+    "@webcomponents/template-shadowroot": "^0.2.1",
     "astro": "^4.6.0",
+    "lit": "^3.1.3",
     "open-props": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
