--- a/package.json
+++ b/package.json
@@ -25,24 +25,25 @@
     "@sentry/astro": "^7.112.2",
     "@spotlightjs/astro": "^1.0.20",
     "@webcomponents/template-shadowroot": "^0.2.1",
-    "astro": "^4.6.4",
+    "astro": "^4.7.0",
     "lit": "^3.1.3",
-    "open-props": "^1.7.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "open-props": "^1.7.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-use": "^17.5.0"
   },
   "devDependencies": {
     "@astrojs/react": "^3.3.1",
     "@eslint/js": "^9.1.1",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
-    "canvas-confetti": "^1.9.2",
+    "canvas-confetti": "^1.9.3",
     "eslint": "^9.1.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-astro": "^0.34.0",
+    "eslint-plugin-astro": "^1.1.1",
     "eslint-plugin-markdown": "^4.0.1",
-    "globals": "^15.0.0",
+    "globals": "^15.1.0",
     "postcss-html": "^1.6.0",
     "postcss-import": "^16.1.0",
     "postcss-jit-props": "^1.0.14",
@@ -51,9 +52,9 @@
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.7.1",
+    "typescript-eslint": "^7.8.0",
     "vite": "^5.2.10",
-    "vitest": "^1.5.1"
+    "vitest": "^1.5.3"
   },
   "engines": {
     "node": ">=20.12.0",
