--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "astro": "astro",
     "lint": "eslint  \"src/**/*.{js,ts,jsx,tsx,astro}\"",
     "fix": "eslint  --fix  \"src/**/*.{js,ts,jsx,tsx,astro}\"",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "stylelint": "stylelint \"src/**/*.{css,astro}\"",
+    "sfix": "stylelint \"src/**/*.{css,astro}\" --fix",
+    "inspect": "eslint --inspect-config"
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
@@ -22,10 +25,10 @@
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.4",
     "@astrojs/vercel": "^7.5.4",
-    "@sentry/astro": "^7.112.2",
+    "@sentry/astro": "^7.113.0",
     "@spotlightjs/astro": "^1.0.20",
     "@webcomponents/template-shadowroot": "^0.2.1",
-    "astro": "^4.7.0",
+    "astro": "^4.7.1",
     "lit": "^3.1.3",
     "open-props": "^1.7.4",
     "react": "^18.3.1",
@@ -33,7 +36,7 @@
     "react-use": "^17.5.0"
   },
   "devDependencies": {
-    "@astrojs/react": "^3.3.1",
+    "@astrojs/react": "^3.3.2",
     "@eslint/js": "^9.1.1",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
@@ -41,7 +44,7 @@
     "canvas-confetti": "^1.9.3",
     "eslint": "^9.1.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-astro": "^1.1.1",
+    "eslint-plugin-astro": "^1.1.2",
     "eslint-plugin-markdown": "^4.0.1",
     "globals": "^15.1.0",
     "postcss-html": "^1.6.0",
@@ -51,9 +54,12 @@
     "postcss-pow": "^1.0.1",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
+    "stylelint": "^16.5.0",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-prettier": "^5.0.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.8.0",
-    "vite": "^5.2.10",
+    "vite": "^5.2.11",
     "vitest": "^1.5.3"
   },
   "engines": {
