--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,9 +37,9 @@
   "eslint.validate": [
     "javascript",
     "javascriptreact",
-    "astro", // Enable .astro
-    "typescript", // Enable .ts
-    "typescriptreact" // Enable .tsx
+    "astro",
+    "typescript",
+    "typescriptreact"
   ],
   "stylelint.validate": [
     "html",
