--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,20 +2,38 @@
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "verbatimModuleSyntax": true,
+    "experimentalDecorators": true,
+    "declaration": true,
+    "useDefineForClassFields": false,
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["src/components/*"],
-      "@cc/*": ["src/customComponents/*"],
-      "@layouts/*": ["src/layouts/*"],
-      "@content/*": ["src/content/*"],
-      "@assets/*": ["src/assets/*"],
-      "@styles/*": ["src/styles/*"],
-      "@scripts/*": ["src/scripts/*"]
+      "@components/*": [
+        "src/components/*"
+      ],
+      "@cc/*": [
+        "src/customComponents/*"
+      ],
+      "@layouts/*": [
+        "src/layouts/*"
+      ],
+      "@content/*": [
+        "src/content/*"
+      ],
+      "@assets/*": [
+        "src/assets/*"
+      ],
+      "@styles/*": [
+        "src/styles/*"
+      ],
+      "@scripts/*": [
+        "src/scripts/*"
+      ]
     },
     "jsx": "react-jsx",
     "jsxImportSource": "react"
   },
   "include": [
+    "src/**/*.d.ts",
     "**/*.ts",
     "**/*.mts",
     "**/*.js",
@@ -23,5 +41,7 @@
     "src/**/*.astro",
     "src/**/*.tsx"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
