--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "every-layout-1",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "dev": "astro dev",
     "test": "vitest",
@@ -19,13 +19,13 @@
     "inspect": "eslint --inspect-config"
   },
   "dependencies": {
-    "@astrojs/check": "^0.5.10",
+    "@astrojs/check": "^0.6.0",
     "@astrojs/lit": "^4.0.1",
     "@astrojs/mdx": "^2.3.1",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.4",
     "@astrojs/vercel": "^7.5.4",
-    "@sentry/astro": "^7.113.0",
+    "@sentry/astro": "^7.114.0",
     "@spotlightjs/astro": "^1.0.20",
     "@webcomponents/template-shadowroot": "^0.2.1",
     "astro": "^4.7.1",
@@ -49,7 +49,7 @@
     "eslint-plugin-markdown": "^5.0.0",
     "eslint-plugin-regexp": "^2.5.0",
     "globals": "^15.1.0",
-    "postcss-html": "^1.6.0",
+    "postcss-html": "^1.7.0",
     "postcss-import": "^16.1.0",
     "postcss-jit-props": "^1.0.14",
     "postcss-nesting": "^12.1.2",
@@ -66,6 +66,7 @@
   },
   "engines": {
     "node": "^18.17.1 || ^20.3.0 || >=21.0.0",
-    "pnpm": ">=8.6.12"
-  }
+    "pnpm": ">=8.15.8"
+  },
+  "packageManager": "pnpm@8.15.8"
 }
