--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,15 +13,7 @@
   // Do not ignore node_modules css files, which is ignored by default
   "cssvar.ignore": [],
   // add support for autocomplete in JS or JS like files
-  "cssvar.extensions": [
-    "css",
-    "postcss",
-    "jsx",
-    "js",
-    "ts",
-    "tsx",
-    "astro"
-  ],
+  "cssvar.extensions": ["css", "postcss", "jsx", "js", "ts", "tsx", "astro"],
   "[astro][javascript][typescript][markdown]": {
     "editor.defaultFormatter": "astro-build.astro-vscode",
     "editor.formatOnPaste": false,
@@ -41,11 +33,6 @@
     "typescript",
     "typescriptreact"
   ],
-  "stylelint.validate": [
-    "html",
-    "vue",
-    "svelte",
-    "astro"
-  ],
+  "stylelint.validate": ["html", "vue", "svelte", "astro"],
   "typescript.inlayHints.parameterNames.enabled": "none"
 }
