--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,38 +1,40 @@
 {
-  "css.validate": false,
-  "less.validate": false,
-  "scss.validate": false,
+  "editor.inlayHints.enabled": "on",
+  // Do not ignore node_modules css files, which is ignored by default
+  "cssvar.themes": [
+    "dark",
+    "light",
+    "dim",
+    "choco"
+  ],
+  "cssvar.enable": true,
+  // Since we want to scan css files inside `node_modules as well
+  // we need to set cssvar.ignore property to empty array
+  "cssvar.ignore": [],
+  "cssvar.excludeThemedVariables": false,
+  // add support for autocomplete in JS or JS like files
+  /**
+   * This setting controls whether inlay hints are enabled in the editor.
+   * Inlay hints are small pieces of information displayed inline with the code,
+   * providing additional context or details about the code.
+   *
+   * Possible values:
+   * - "off": Inlay hints are disabled.
+   * - "on": Inlay hints are enabled.
+   */
   "cssvar.files": [
-    "./node_modules/open-props/open-props.min.css",
-    "src/styles/**/*css",
-    "src/styles/**/*.astro"
+    "**/*.astro",
+    "**/*.css",
+    "./node_modules/open-props/open-props.min.css"
     // if you have an alternative path to where your styles are located
     // you can add it in this array of files
     // "assets/styles/variables.css"
   ],
-  // Do not ignore node_modules css files, which is ignored by default
-  "cssvar.ignore": [],
-  // add support for autocomplete in JS or JS like files
-  "cssvar.extensions": ["css", "postcss", "jsx", "js", "ts", "tsx", "astro"],
-  "[astro][javascript][typescript][markdown]": {
-    "editor.defaultFormatter": "astro-build.astro-vscode",
-    "editor.formatOnPaste": false,
-    "editor.formatOnSave": true,
-    "editor.formatOnType": true
-  },
-  "[json]": {
-    "editor.defaultFormatter": "mohsen1.prettify-json",
-    "editor.formatOnPaste": true,
-    "editor.formatOnSave": true,
-    "editor.formatOnType": true
-  },
-  "eslint.validate": [
-    "javascript",
-    "javascriptreact",
-    "astro",
-    "typescript",
-    "typescriptreact"
+  "cssvar.extensions": [
+    "css",
+    "postcss",
+    "jsx",
+    "tsx",
+    "astro"
   ],
-  "stylelint.validate": ["html", "vue", "svelte", "astro"],
-  "typescript.inlayHints.parameterNames.enabled": "none"
 }
