--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^1.2.0",
     "eslint-plugin-markdown": "^5.0.0",
+    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-regexp": "^2.6.0",
     "globals": "^15.4.0",
     "postcss-html": "^1.7.0",
