--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,15 +7,11 @@
     "useDefineForClassFields": false,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "src/*"
-      ],
+      "@/*": ["src/*"],
       // "@components/*": [
       //   "src/components/*"
       // ],
-      "@cc/*": [
-        "src/astro-custom-layout-components/*"
-      ],
+      "@cc/*": ["src/astro-custom-layout-components/*"]
       // "@layouts/*": [
       //   "src/layouts/*"
       // ],
@@ -35,10 +31,5 @@
     "jsx": "react-jsx",
     "jsxImportSource": "react"
   },
-  "include": [
-    "src/**/*.astro",
-    "src/**/*.js",
-    "src/**/*.ts",
-    "src/**/*.tsx"
-  ]
+  "include": ["src/**/*.astro", "src/**/*.js", "src/**/*.ts", "src/**/*.tsx"]
 }
