--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,13 @@
 {
   "editor.inlayHints.enabled": "on",
   // Do not ignore node_modules css files, which is ignored by default
-  "cssvar.themes": ["dark", "light", "dim", "choco"],
-  "cssvar.enable": true,
+  "cssvar.enable": false,
+  "cssvar.themes": [
+    "dark",
+    "light",
+    "dim",
+    "choco"
+  ],
   // Since we want to scan css files inside `node_modules as well
   // we need to set cssvar.ignore property to empty array
   "cssvar.ignore": [],
@@ -25,5 +30,11 @@
     // you can add it in this array of files
     // "assets/styles/variables.css"
   ],
-  "cssvar.extensions": ["css", "postcss", "jsx", "tsx", "astro"]
+  "cssvar.extensions": [
+    "css",
+    "postcss",
+    "jsx",
+    "tsx",
+    "astro"
+  ]
 }
