--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@astrojs/check": "^0.7.0",
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
-    "@astrojs/vercel": "^7.6.0",
-    "@sentry/astro": "^8.8.0",
+    "@astrojs/vercel": "^7.7.0",
+    "@fontsource-variable/open-sans": "^5.0.29",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@sentry/astro": "^8.9.2",
     "@spotlightjs/astro": "^1.0.20",
     "@webcomponents/template-shadowroot": "^0.2.1",
-    "astro": "^4.10.1",
+    "astro": "^4.10.2",
     "open-props": "^1.7.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -43,7 +45,7 @@
     "canvas-confetti": "^1.9.3",
     "eslint": "^9.4.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-astro": "^1.2.0",
+    "eslint-plugin-astro": "^1.2.2",
     "eslint-plugin-markdown": "^5.0.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
@@ -54,14 +56,14 @@
     "postcss-jit-props": "^1.0.14",
     "postcss-nesting": "^12.1.5",
     "postcss-pow": "^1.0.1",
-    "prettier": "^3.3.1",
+    "prettier": "^3.3.2",
     "prettier-plugin-astro": "^0.14.0",
     "stylelint": "^16.6.1",
     "stylelint-config-html": "^1.1.0",
     "stylelint-prettier": "^5.0.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.0",
-    "vite": "^5.2.13",
+    "vite": "^5.3.1",
     "vitest": "^1.6.0"
   },
   "engines": {
