--- a/package.json
+++ b/package.json
@@ -32,13 +32,15 @@
     "open-props": "^1.7.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-use": "^17.5.0"
+    "react-use": "^17.5.0",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@astrojs/mdx": "^3.1.0",
     "@astrojs/react": "^3.5.0",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.4.0",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
