--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-regexp": "^2.6.0",
+    "eslint-plugin-wc": "^2.1.0",
     "globals": "^15.4.0",
     "postcss-html": "^1.7.0",
     "postcss-import": "^16.1.0",
