--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@astrojs/rss": "^4.0.6",
-    "@astrojs/sitemap": "^3.1.5",
-    "@astrojs/vercel": "^7.7.0",
+    "@astrojs/sitemap": "^3.1.6",
+    "@astrojs/vercel": "^7.7.1",
     "@fontsource-variable/open-sans": "^5.0.29",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@sentry/astro": "^8.9.2",
+    "@sentry/astro": "^8.11.0",
     "@spotlightjs/astro": "^1.0.20",
     "@webcomponents/template-shadowroot": "^0.2.1",
-    "astro": "^4.10.2",
+    "astro": "^4.11.0",
+    "date-fns": "^3.6.0",
     "open-props": "^1.7.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -36,24 +37,24 @@
     "sharp": "^0.33.4"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^3.1.0",
-    "@astrojs/react": "^3.5.0",
+    "@astrojs/mdx": "^3.1.1",
+    "@astrojs/react": "^3.6.0",
     "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.4.0",
+    "@eslint/js": "^9.5.0",
     "@types/canvas-confetti": "^1.6.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "canvas-confetti": "^1.9.3",
-    "eslint": "^9.4.0",
+    "eslint": "^9.5.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^1.2.2",
     "eslint-plugin-markdown": "^5.0.0",
-    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-regexp": "^2.6.0",
     "eslint-plugin-wc": "^2.1.0",
-    "globals": "^15.4.0",
+    "globals": "^15.6.0",
     "postcss-html": "^1.7.0",
     "postcss-import": "^16.1.0",
     "postcss-jit-props": "^1.0.14",
@@ -64,8 +65,8 @@
     "stylelint": "^16.6.1",
     "stylelint-config-html": "^1.1.0",
     "stylelint-prettier": "^5.0.0",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.13.0",
+    "typescript": "^5.5.2",
+    "typescript-eslint": "^7.13.1",
     "vite": "^5.3.1",
     "vitest": "^1.6.0"
   },
