--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,12 @@
   "editor.inlayHints.enabled": "on",
   // Do not ignore node_modules css files, which is ignored by default
   "cssvar.enable": false,
-  "cssvar.themes": ["dark", "light", "dim", "choco"],
+  "cssvar.themes": [
+    "dark",
+    "light",
+    "dim",
+    "choco"
+  ],
   // Since we want to scan css files inside `node_modules as well
   // we need to set cssvar.ignore property to empty array
   "cssvar.ignore": [],
@@ -18,12 +23,17 @@
    * - "on": Inlay hints are enabled.
    */
   "cssvar.files": [
-    "**/*.astro",
-    "**/*.css",
+    "./src/styles/**/*css",
     "./node_modules/open-props/open-props.min.css"
     // if you have an alternative path to where your styles are located
     // you can add it in this array of files
     // "assets/styles/variables.css"
   ],
-  "cssvar.extensions": ["css", "postcss", "jsx", "tsx", "astro"]
+  "cssvar.extensions": [
+    "css",
+    "postcss",
+    "jsx",
+    "tsx",
+    "astro"
+  ]
 }
