--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
-    "@astrojs/rss": "^4.0.6",
+    "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
-    "@astrojs/vercel": "^7.7.1",
+    "@astrojs/vercel": "^7.7.2",
     "@fontsource-variable/open-sans": "^5.0.29",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@sentry/astro": "^8.11.0",
-    "@spotlightjs/astro": "^1.0.20",
+    "@headlessui/react": "^2.1.1",
+    "@sentry/astro": "^8.12.0",
     "@webcomponents/template-shadowroot": "^0.2.1",
-    "astro": "^4.11.0",
+    "astro": "^4.11.1",
     "date-fns": "^3.6.0",
     "open-props": "^1.7.4",
     "react": "^18.3.1",
@@ -37,7 +37,7 @@
     "sharp": "^0.33.4"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^3.1.1",
+    "@astrojs/mdx": "^3.1.2",
     "@astrojs/react": "^3.6.0",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.5.0",
@@ -66,7 +66,7 @@
     "stylelint-config-html": "^1.1.0",
     "stylelint-prettier": "^5.0.0",
     "typescript": "^5.5.2",
-    "typescript-eslint": "^7.13.1",
+    "typescript-eslint": "^7.14.1",
     "vite": "^5.3.1",
     "vitest": "^1.6.0"
   },
