--- a/package.json
+++ b/package.json
@@ -19,18 +19,16 @@
     "inspect": "eslint --inspect-config"
   },
   "dependencies": {
-    "@astrojs/check": "^0.7.0",
+    "@astrojs/check": "^0.8.0",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/vercel": "^7.7.2",
-    "@fontsource-variable/open-sans": "^5.0.29",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@headlessui/react": "^2.1.1",
-    "@sentry/astro": "^8.13.0",
+    "@headlessui/react": "^2.1.2",
+    "@sentry/astro": "^8.16.0",
     "@webcomponents/template-shadowroot": "^0.2.1",
-    "astro": "^4.11.3",
+    "astro": "^4.11.5",
     "date-fns": "^3.6.0",
-    "open-props": "^1.7.4",
+    "open-props": "^1.7.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-use": "^17.5.0",
@@ -39,6 +37,7 @@
   "devDependencies": {
     "@astrojs/mdx": "^3.1.2",
     "@astrojs/react": "^3.6.0",
+    "@eslint/compat": "^1.1.0",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.6.0",
     "@types/canvas-confetti": "^1.6.4",
@@ -48,13 +47,13 @@
     "canvas-confetti": "^1.9.3",
     "eslint": "^9.6.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-astro": "^1.2.2",
+    "eslint-plugin-astro": "^1.2.3",
     "eslint-plugin-markdown": "^5.0.0",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-regexp": "^2.6.0",
     "eslint-plugin-wc": "^2.1.0",
-    "globals": "^15.7.0",
+    "globals": "^15.8.0",
     "postcss-html": "^1.7.0",
     "postcss-import": "^16.1.0",
     "postcss-jit-props": "^1.0.14",
@@ -66,13 +65,13 @@
     "stylelint-config-html": "^1.1.0",
     "stylelint-prettier": "^5.0.0",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^7.15.0",
-    "vite": "^5.3.2",
+    "typescript-eslint": "^7.16.0",
+    "vite": "^5.3.3",
     "vitest": "^1.6.0"
   },
   "engines": {
-    "node": "^18.17.1 || ^20.3.0 || >=21.0.0",
-    "pnpm": ">=8.15.8"
+    "node": "^20.3.0",
+    "pnpm": ">=9.1.2"
   },
-  "packageManager": "pnpm@9.3.0"
+  "packageManager": "pnpm@9.5.0"
 }
