pnpm astro add preact

--- a/package.json
+++ b/package.json
@@ -20,14 +20,19 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.8.0",
+    "@astrojs/preact": "^3.5.0",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/vercel": "^7.7.2",
     "@sentry/astro": "^8.16.0",
     "@webcomponents/template-shadowroot": "^0.2.1",
+    "add": "^2.0.6",
     "astro": "^4.11.5",
     "date-fns": "^3.6.0",
+    "nanostores": "^0.10.3",
     "open-props": "^1.7.5",
+    "pnpm": "^9.5.0",
+    "preact": "^10.22.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-use": "^17.5.0",
