--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "eslint  \"src/**/*.{js,ts,jsx,tsx,astro}\"",
-    "fix": "eslint  --fix  \"src/**/*.{js,ts,jsx,tsx,astro}\"",
+    "lint": "eslint  .",
+    "fix": "eslint  --fix  .",
     "format": "prettier --write  --ignore-unknown .",
     "stylelint": "stylelint \"src/**/*.{css,astro}\"",
     "sfix": "stylelint \"src/**/*.{css,astro}\" --fix",
@@ -24,6 +24,7 @@
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/vercel": "^7.7.2",
+    "@preact/signals": "^1.3.0",
     "@sentry/astro": "^8.16.0",
     "@webcomponents/template-shadowroot": "^0.2.1",
     "add": "^2.0.6",
@@ -41,7 +42,7 @@
   "devDependencies": {
     "@astrojs/mdx": "^3.1.2",
     "@astrojs/react": "^3.6.0",
-    "@eslint/compat": "^1.1.0",
+    "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.6.0",
     "@types/canvas-confetti": "^1.6.4",
@@ -52,7 +53,10 @@
     "eslint": "^9.6.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^1.2.3",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-lit": "^1.14.0",
     "eslint-plugin-markdown": "^5.0.0",
+    "eslint-plugin-react": "^7.34.4",
     "eslint-plugin-regexp": "^2.6.0",
     "eslint-plugin-wc": "^2.1.0",
     "globals": "^15.8.0",
@@ -62,7 +66,6 @@
     "postcss-nesting": "^12.1.5",
     "postcss-pow": "^1.0.1",
     "prettier": "^3.3.2",
-    "prettier-plugin-astro": "^0.14.0",
     "stylelint": "^16.6.1",
     "stylelint-config-html": "^1.1.0",
     "stylelint-prettier": "^5.0.0",
