--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,7 @@
   "editor.inlayHints.enabled": "on",
   // Do not ignore node_modules css files, which is ignored by default
   "cssvar.enable": false,
-  "cssvar.themes": [
-    "dark",
-    "light",
-    "dim",
-    "choco"
-  ],
+  "cssvar.themes": ["dark", "light", "dim", "choco"],
   // Since we want to scan css files inside `node_modules as well
   // we need to set cssvar.ignore property to empty array
   "cssvar.ignore": [],
@@ -29,11 +24,5 @@
     // you can add it in this array of files
     // "assets/styles/variables.css"
   ],
-  "cssvar.extensions": [
-    "css",
-    "postcss",
-    "jsx",
-    "tsx",
-    "astro"
-  ]
+  "cssvar.extensions": ["css", "postcss", "jsx", "tsx", "astro"]
 }
