--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,25 +6,20 @@
     "useDefineForClassFields": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "src/*"
-      ],
-      "@cc/*": [
-        "src/astro-custom-layout-components/*"
-      ]
+      "@/*": ["src/*"],
+      "@cc/*": ["src/astro-custom-layout-components/*"]
     },
     "jsx": "react-jsx",
     "jsxImportSource": "react"
   },
-  "include": [
-    "src/**/*.*",
-  ],
+  "include": ["src/**/*.*"],
   "exclude": [
     "node_modules",
     "dist",
     "build",
     "src/**/_*.*",
     "src/components/_Icon.tsx",
-    "src/pages/demo/modal-demo.astro"
+    "src/pages/demo/modal-demo.astro",
+    "src/web-component/astro-modal/index.astro"
   ]
 }
