--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "every-layout-1",
   "type": "module",
   "version": "0.0.2",
+  "imports": {
+    "#*": "./src/*"
+  },
   "scripts": {
     "dev": "astro dev",
     "test": "vitest",
@@ -11,7 +14,7 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "eslint  .",
+    "lint": "eslint",
     "fix": "eslint  --fix  .",
     "format": "prettier --write  --ignore-unknown .",
     "stylelint": "stylelint \"src/**/*.{css,astro}\"",
@@ -19,62 +22,62 @@
     "inspect": "eslint --inspect-config"
   },
   "dependencies": {
-    "@astrojs/check": "^0.8.2",
+    "@astrojs/check": "^0.9.2",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/vercel": "^7.7.2",
     "@preact/signals": "^1.3.0",
-    "@sentry/astro": "^8.18.0",
+    "@sentry/astro": "^8.25.0",
     "@webcomponents/template-shadowroot": "^0.2.1",
     "add": "^2.0.6",
-    "astro": "^4.11.6",
+    "astro": "^4.13.3",
     "date-fns": "^3.6.0",
-    "nanostores": "^0.10.3",
+    "nanostores": "^0.11.2",
     "open-props": "^1.7.5",
-    "pnpm": "^9.5.0",
+    "pnpm": "^9.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-use": "^17.5.0",
+    "react-use": "^17.5.1",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^3.1.2",
-    "@astrojs/react": "^3.6.0",
+    "@astrojs/mdx": "^3.1.3",
+    "@astrojs/react": "^3.6.2",
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.7.0",
+    "@eslint/js": "^9.9.0",
     "@types/canvas-confetti": "^1.6.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
+    "astro-eslint-parser": "^1.0.2",
+    "autoprefixer": "^10.4.20",
     "canvas-confetti": "^1.9.3",
-    "eslint": "^9.7.0",
+    "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^1.2.3",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-lit": "^1.14.0",
     "eslint-plugin-markdown": "^5.1.0",
-    "eslint-plugin-react": "^7.34.4",
+    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-regexp": "^2.6.0",
     "eslint-plugin-wc": "^2.1.0",
-    "globals": "^15.8.0",
+    "globals": "^15.9.0",
     "postcss-html": "^1.7.0",
     "postcss-import": "^16.1.0",
     "postcss-jit-props": "^1.0.14",
     "postcss-nesting": "^12.1.5",
     "postcss-pow": "^1.0.1",
     "prettier": "^3.3.3",
-    "stylelint": "^16.7.0",
+    "stylelint": "^16.8.1",
     "stylelint-config-html": "^1.1.0",
     "stylelint-prettier": "^5.0.2",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^7.16.1",
-    "vite": "^5.3.4",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.0.1",
+    "vite": "^5.4.0",
     "vitest": "^1.6.0"
   },
   "engines": {
     "node": "^20.3.0",
     "pnpm": ">=9.1.2"
   },
-  "packageManager": "pnpm@9.5.0"
+  "packageManager": "pnpm@9.7.0"
 }
