--- a/package.json
+++ b/package.json
@@ -27,17 +27,17 @@
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/vercel": "^7.7.2",
     "@preact/signals": "^1.3.0",
-    "@sentry/astro": "^8.25.0",
+    "@sentry/astro": "^8.26.0",
     "@webcomponents/template-shadowroot": "^0.2.1",
     "add": "^2.0.6",
-    "astro": "^4.13.3",
+    "astro": "^4.14.2",
     "date-fns": "^3.6.0",
     "nanostores": "^0.11.2",
     "open-props": "^1.7.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-use": "^17.5.1",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@astrojs/mdx": "^3.1.3",
@@ -63,20 +63,20 @@
     "postcss-html": "^1.7.0",
     "postcss-import": "^16.1.0",
     "postcss-jit-props": "^1.0.14",
-    "postcss-nesting": "^12.1.5",
+    "postcss-nesting": "^13.0.0",
     "postcss-pow": "^1.0.1",
     "prettier": "^3.3.3",
-    "stylelint": "^16.8.1",
+    "stylelint": "^16.8.2",
     "stylelint-config-html": "^1.1.0",
     "stylelint-prettier": "^5.0.2",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.0",
-    "vitest": "^1.6.0"
+    "typescript-eslint": "^8.1.0",
+    "vite": "^5.4.1",
+    "vitest": "^2.0.5"
   },
   "engines": {
-    "node": "^20.3.0",
+    "node": ">= 20.11.0 <21 || >= 21.2.0",
     "pnpm": ">=9.1.2"
   },
-  "packageManager": "pnpm@9.7.0"
+  "packageManager": "pnpm@9.7.1"
 }
