--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "every-layout-1",
   "type": "module",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "imports": {
     "#*": "./src/*"
   },
@@ -10,78 +10,79 @@
     "test": "vitest run",
     "host": "astro dev --host",
     "start": "astro dev",
-    "check-types": "astro check",
+    "check": "astro check",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
     "lint": "eslint",
     "fix": "eslint  --fix",
-    "format": "prettier --write  --ignore-unknown .",
+    "format": "prettier --write   --ignore-unknown .",
+    "format-check": "prettier --check .",
     "stylelint": "stylelint \"src/**/*.{css,astro}\"",
     "sfix": "stylelint \"src/**/*.{css,astro}\" --fix",
     "inspect": "eslint --inspect-config"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
-    "@astrojs/rss": "^4.0.7",
-    "@astrojs/sitemap": "^3.1.6",
-    "@astrojs/vercel": "^7.7.2",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/rss": "^4.0.9",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/vercel": "^7.8.2",
     "@preact/signals": "^1.3.0",
-    "@sentry/astro": "^8.26.0",
+    "@sentry/astro": "^8.35.0",
     "@webcomponents/template-shadowroot": "^0.2.1",
     "add": "^2.0.6",
-    "astro": "^4.14.2",
-    "date-fns": "^3.6.0",
-    "nanostores": "^0.11.2",
-    "open-props": "^1.7.5",
+    "astro": "^4.16.7",
+    "date-fns": "^4.1.0",
+    "nanostores": "^0.11.3",
+    "open-props": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-use": "^17.5.1",
     "sharp": "^0.33.5",
-    "vitest": "^2.0.5"
+    "vitest": "^2.1.3"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^3.1.3",
+    "@astrojs/mdx": "^3.1.8",
     "@astrojs/react": "^3.6.2",
-    "@eslint/compat": "^1.1.1",
+    "@eslint/compat": "^1.2.1",
     "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.9.0",
+    "@eslint/js": "^9.13.0",
     "@types/canvas-confetti": "^1.6.4",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint-plugin-markdown": "^2.0.2",
     "@types/eslint__js": "^8.42.3",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "astro-eslint-parser": "^1.0.2",
+    "@types/postcss-import": "^14.0.3",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "astro-eslint-parser": "^1.0.3",
     "autoprefixer": "^10.4.20",
     "canvas-confetti": "^1.9.3",
-    "eslint": "^9.9.0",
+    "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-astro": "^1.2.3",
-    "eslint-plugin-lit": "^1.14.0",
+    "eslint-plugin-astro": "^1.3.0",
     "eslint-plugin-markdown": "^5.1.0",
-    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-regexp": "^2.6.0",
-    "eslint-plugin-wc": "^2.1.0",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.41",
+    "eslint-plugin-wc": "^2.2.0",
+    "globals": "^15.11.0",
+    "postcss": "^8.4.47",
     "postcss-html": "^1.7.0",
     "postcss-import": "^16.1.0",
     "postcss-jit-props": "^1.0.14",
-    "postcss-nesting": "^13.0.0",
+    "postcss-nesting": "^13.0.1",
     "postcss-pow": "^1.0.1",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
-    "stylelint": "^16.8.2",
+    "stylelint": "^16.10.0",
     "stylelint-config-html": "^1.1.0",
     "stylelint-prettier": "^5.0.2",
-    "turbo": "^2.0.14",
-    "typescript": "^5.5.4",
-    "typescript-eslint": "^8.2.0"
+    "turbo": "^2.2.3",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.11.0"
   },
   "engines": {
     "node": ">= 20.11.0 <21 || >= 21.2.0",
     "pnpm": ">=9.1.2"
   },
-  "packageManager": "pnpm@9.7.1"
+  "packageManager": "pnpm@9.12.2"
 }
