--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,23 +4,18 @@
     "rootDir": ".",
     "experimentalDecorators": true, // default is false for TypeScript 5.0 and up
     "useDefineForClassFields": false, // default is true when "target" is "ES2022" or higher
-    "declaration": true,
-    "declarationDir": "./types",
-    "declarationMap": true,
     "strictNullChecks": true,
     "baseUrl": ".",
     "jsx": "react-jsx",
     "jsxImportSource": "react"
   },
-  "include": [
-    "src",
-    "*.config.*"
-  ],
+  "include": ["src", "*.config.*"],
   "exclude": [
     ".vercel",
     ".astro",
     "dist",
     "**/_*.*",
-    "my-custom-cache-directory"
+    "my-custom-cache-directory",
+    "test"
   ]
 }
