--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "eslint",
-    "fix": "eslint  --fix",
-    "format": "prettier --write   --ignore-unknown .",
+    "lint": "eslint .",
+    "fix": "eslint . --fix",
+    "format": "prettier  --write   --ignore-unknown .",
     "format-check": "prettier --check .",
     "stylelint": "stylelint \"src/**/*.{css,astro}\"",
     "sfix": "stylelint \"src/**/*.{css,astro}\" --fix",
-    "inspect": "eslint --inspect-config"
+    "inspect": "eslint . --inspect-config"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -58,6 +58,7 @@
     "@eslint/compat": "^1.2.2",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.14.0",
+    "@eslint/markdown": "^6.2.1",
     "@types/canvas-confetti": "^1.6.4",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint-plugin-markdown": "^2.0.2",
@@ -71,7 +72,6 @@
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^1.3.1",
-    "eslint-plugin-markdown": "^5.1.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-regexp": "^2.6.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
