--- a/package.json
+++ b/package.json
@@ -35,66 +35,66 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/rss": "^4.0.9",
+    "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/vercel": "8.0.0-beta.4",
-    "@preact/signals": "^1.3.0",
-    "@sentry/astro": "^8.40.0",
+    "@astrojs/vercel": "8.0.2",
+    "@preact/signals": "^1.3.2",
+    "@sentry/astro": "^8.50.0",
     "@webcomponents/template-shadowroot": "^0.2.1",
     "add": "^2.0.6",
-    "astro": "5.0.0-beta.10",
+    "astro": "5.1.7",
     "date-fns": "^4.1.0",
     "nanostores": "^0.11.3",
-    "open-props": "^1.7.7",
+    "open-props": "^1.7.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-use": "^17.5.1",
+    "react-use": "^17.6.0",
     "sharp": "^0.33.5",
-    "vitest": "^2.1.5"
+    "vitest": "^2.1.8"
   },
   "devDependencies": {
-    "@astrojs/mdx": "4.0.0-beta.3",
-    "@astrojs/react": "3.6.3-beta.0",
+    "@astrojs/mdx": "4.0.6",
+    "@astrojs/react": "4.1.5",
     "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.15.0",
+    "@eslint/js": "^9.18.0",
     "@eslint/markdown": "^6.2.1",
-    "@types/canvas-confetti": "^1.6.4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint-plugin-markdown": "^2.0.2",
     "@types/eslint__js": "^8.42.3",
-    "@types/node": "^22.9.1",
+    "@types/node": "^22.10.7",
     "@types/postcss-import": "^14.0.3",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "astro-eslint-parser": "^1.1.0",
     "autoprefixer": "^10.4.20",
     "canvas-confetti": "^1.9.3",
-    "eslint": "^9.15.0",
+    "eslint": "^9.18.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^1.3.1",
-    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-regexp": "^2.7.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-wc": "^2.2.0",
-    "globals": "^15.12.0",
-    "postcss": "^8.4.49",
-    "postcss-html": "^1.7.0",
+    "globals": "^15.14.0",
+    "postcss": "^8.5.1",
+    "postcss-html": "^1.8.0",
     "postcss-import": "^16.1.0",
-    "postcss-jit-props": "^1.0.14",
+    "postcss-jit-props": "^1.0.15",
     "postcss-nesting": "^13.0.1",
     "postcss-pow": "^1.0.1",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
-    "stylelint": "^16.10.0",
+    "stylelint": "^16.13.2",
     "stylelint-config-html": "^1.1.0",
     "stylelint-prettier": "^5.0.2",
-    "turbo": "^2.3.1",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.15.0"
+    "turbo": "^2.3.3",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0"
   },
   "engines": {
     "node": "^22.2.0",
     "pnpm": ">=9.1.2"
   },
-  "packageManager": "pnpm@9.14.2"
+  "packageManager": "pnpm@9.15.4"
 }
