--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,12 @@
     "jsxImportSource": "react",
     "allowJs": true // required, and included with all Astro templates
   },
-  "files": [".astro/types.d.ts"],
-  "include": ["**/*"],
+  "files": [
+    ".astro/types.d.ts"
+  ],
+  "include": [
+    "**/*"
+  ],
   "exclude": [
     ".vercel",
     ".astro",
