--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/vercel": "8.0.2",
-    "@preact/signals": "^1.3.2",
+    "@astrojs/vercel": "~8.0.3",
+    "@preact/signals": "^2.0.1",
     "@sentry/astro": "^8.50.0",
     "@webcomponents/template-shadowroot": "^0.2.1",
     "add": "^2.0.6",
-    "astro": "5.1.7",
+    "astro": "^5.1.8",
     "date-fns": "^4.1.0",
     "nanostores": "^0.11.3",
     "open-props": "^1.7.10",
@@ -53,8 +53,8 @@
     "vitest": "^2.1.8"
   },
   "devDependencies": {
-    "@astrojs/mdx": "4.0.6",
-    "@astrojs/react": "4.1.5",
+    "@astrojs/mdx": "~4.0.7",
+    "@astrojs/react": "~4.1.6",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@eslint/markdown": "^6.2.1",
@@ -90,7 +90,7 @@
     "stylelint-prettier": "^5.0.2",
     "turbo": "^2.3.3",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript-eslint": "^8.21.0"
   },
   "engines": {
     "node": "^22.2.0",
