--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,13 @@
   // we need to set cssvar.ignore property to empty array
   "cssvar.ignore": [],
   "cssvar.excludeThemedVariables": false,
-
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "astro",
+    "typescript",
+    "typescriptreact"
+  ],
   // add support for autocomplete in JS or JS like files
   /**
    * This setting controls whether inlay hints are enabled in the editor.
