--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   ],
   "scripts": {
     "dev": "astro dev",
-    "test": "vitest run",
+    "test": "vitest",
+    "check-types": "tsc --noEmit",
+    "coverage": "vitest run --coverage",
     "host": "astro dev --host",
     "start": "astro dev",
     "check": "astro check",
@@ -37,15 +39,14 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/vercel": "~8.0.4",
-    "@preact/signals": "^2.0.1",
-    "@sentry/astro": "^8.51.0",
+    "@astrojs/vercel": "~8.0.5",
+    "@sentry/astro": "^8.53.0",
     "@webcomponents/template-shadowroot": "^0.2.1",
     "add": "^2.0.6",
-    "astro": "^5.1.10",
+    "astro": "^5.2.3",
     "date-fns": "^4.1.0",
     "nanostores": "^0.11.3",
-    "open-props": "^1.7.10",
+    "open-props": "^1.7.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-use": "^17.6.0",
@@ -53,8 +54,9 @@
     "vitest": "^2.1.8"
   },
   "devDependencies": {
-    "@astrojs/mdx": "~4.0.7",
+    "@astrojs/mdx": "~4.0.8",
     "@astrojs/react": "~4.2.0",
+    "@eslint/compat": "^1.2.6",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.19.0",
     "@eslint/markdown": "^6.2.2",
@@ -62,33 +64,32 @@
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint-plugin-markdown": "^2.0.2",
     "@types/eslint__js": "^8.42.3",
-    "@types/node": "^22.10.10",
+    "@types/node": "^22.13.0",
     "@types/postcss-import": "^14.0.3",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "astro-eslint-parser": "^1.2.1",
     "autoprefixer": "^10.4.20",
+    "browserslist": "^4.24.4",
     "canvas-confetti": "^1.9.3",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-only-warn": "^1.1.0",
     "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-regexp": "^2.7.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-wc": "^2.2.0",
     "globals": "^15.14.0",
-    "postcss": "^8.5.1",
-    "postcss-html": "^1.8.0",
-    "postcss-import": "^16.1.0",
-    "postcss-jit-props": "^1.0.15",
-    "postcss-nesting": "^13.0.1",
-    "postcss-pow": "^1.0.1",
+    "jiti": "^2.4.2",
+    "lightningcss": "^1.29.1",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
     "stylelint": "^16.14.1",
     "stylelint-config-html": "^1.1.0",
     "stylelint-prettier": "^5.0.3",
-    "turbo": "^2.3.4",
+    "turbo": "^2.4.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.22.0"
   },
@@ -96,5 +97,5 @@
     "node": "^22.2.0",
     "pnpm": ">=9.1.2"
   },
-  "packageManager": "pnpm@9.15.4"
+  "packageManager": "pnpm@10.1.0"
 }
