--- a/package.json
+++ b/package.json
@@ -39,11 +39,14 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.0",
-    "@astrojs/vercel": "~8.1.2",
+    "@astrojs/vercel": "~8.1.3",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@sentry/astro": "^8.55.0",
+    "@tailwindcss/vite": "^4.1.0",
     "@webcomponents/template-shadowroot": "^0.2.1",
     "add": "^2.0.6",
-    "astro": "^5.5.3",
+    "astro": "^5.5.6",
     "date-fns": "^4.1.0",
     "nanostores": "^0.11.4",
     "open-props": "^1.7.14",
@@ -51,27 +54,29 @@
     "react-dom": "^18.3.1",
     "react-use": "^17.6.0",
     "sharp": "^0.33.5",
+    "tailwindcss": "^4.1.0",
     "vitest": "^2.1.9"
   },
   "devDependencies": {
-    "@astrojs/mdx": "~4.2.1",
-    "@astrojs/react": "~4.2.1",
+    "@astrojs/mdx": "~4.2.3",
+    "@astrojs/react": "~4.2.3",
     "@eslint/compat": "^1.2.7",
-    "@eslint/eslintrc": "^3.3.0",
-    "@eslint/js": "^9.22.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.23.0",
     "@eslint/markdown": "^6.3.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/canvas-confetti": "^1.9.0",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint-plugin-markdown": "^2.0.2",
-    "@types/node": "^22.13.10",
+    "@types/node": "^22.13.16",
     "@types/postcss-import": "^14.0.3",
-    "@types/react": "^18.3.19",
+    "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.5",
-    "astro-eslint-parser": "^1.2.1",
+    "astro-eslint-parser": "^1.2.2",
     "autoprefixer": "^10.4.21",
     "browserslist": "^4.24.4",
     "canvas-confetti": "^1.9.3",
-    "eslint": "^9.22.0",
+    "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-only-warn": "^1.1.0",
@@ -85,16 +90,17 @@
     "lightningcss": "^1.29.3",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
-    "stylelint": "^16.16.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "stylelint": "^16.17.0",
     "stylelint-config-html": "^1.1.0",
     "stylelint-prettier": "^5.0.3",
     "turbo": "^2.4.4",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.27.0"
+    "typescript-eslint": "^8.29.0"
   },
   "engines": {
     "node": "^22.2.0",
     "pnpm": ">=9.1.2"
   },
-  "packageManager": "pnpm@10.6.5"
+  "packageManager": "pnpm@10.7.1"
 }
