--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "astro": "astro",
     "lint": "eslint .",
     "fix": "eslint . --fix",
+    "lint:biome": "biome lint --write .",
+    "format:biome": "biome format --write .",
+    "check:biome": "biome check --write .",
     "format": "prettier  --write   --ignore-unknown .",
     "format-check": "prettier --check .",
     "stylelint": "stylelint \"src/**/*.{css,astro}\"",
